<resources>
    <string name="app_name">عبد النبي للسيارات</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">البحث</string>
    <string name="passbooks">الايصالات</string>
    <string name="reset_password">اعادة تعيين كلمة المرور</string>
    <string name="password">كلمة المرور</string>
    <string name="stop_notification">تشغيل الاشعارات</string>
    <string name="home">الرئيسية</string>
    <string name="notifications">الاشعارات</string>
    <string name="more">المزيد</string>
    <string name="Enter_old_password">ادخل كلمة المرور القديمة</string>
    <string name="Enter_new_paswword">ادخل كلمة المرور الجديدة</string>
    <string name="new_password">ادخل كلمة المرور الجديدة</string>
    <string name="save">حفظ</string>
    <string name="save_btn">حفظ</string>

</resources>